--- a/spring-mvc-demo-v1/.project
+++ b/spring-mvc-demo-v1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>spring-mvc-demo-v1</name>
+	<name>spring-mvc-project</name>
 	<comment></comment>
 	<projects>
 	</projects>
